# ttl-game-manifests

./: .gitignore  pyproject.toml
src/tail_launcher_sdk/: __init__.py  repository.py  repository.pyi
src/tail_launcher_sdk/enums/: diff_type.py  dir_type.py  proton_compat_config.py  repository_url.py
src/tail_launcher_sdk/models/: compat_runner_overrides.py  diff_audio_file.py  diff_game_file.py  full_audio_file.py  full_game_file.py  game_compat_overrides.py  game_extras.py  game_manifest.py  game_paths.py  game_version.py  graphics_api_config.py  repository_manifest.py  steam_import_config.py  version_assets.py  version_game_files.py  version_metadata.py
src/tail_launcher_sdk/types_/: version_transformer.py
src/ttl_game_manifests/: repository.py  repository.pyi
src/ttl_game_manifests/enums/: __init__.py  download_mode.py  game_biz.py  language.py  region_code.py  winetricks_verb.py
src/ttl_game_manifests/models/: __init__.py  base.py  compat_platform_overrides.py  compat_runner_overrides.py  diff_audio_file.py  diff_game_file.py  diff_urls.py  full_audio_file.py  full_game_file.py  game_compat_overrides.py  game_extras.py  game_manifest.py  game_paths.py  game_preload.py  game_tweak_switches.py  graphics_api_option.py  repository_manifest.py  steam_import_config.py  version_assets.py  version_audio_files.py  version_metadata.py
src/ttl_game_manifests/types_/: __init__.py
tests/: conftest.py  test_async_repository.py  test_model.py  test_repository.py  test_type.py
tests/cassettes/test_async_repository/: test_game_manifest[asyncio].yaml  (+1 more)
(+10 files in other folders)
