[project]
name = "ttl-game-manifests"
version = "0.1.1"
requires-python = ">=3.12.3,<3.15"
dependencies = [
    "annotated-types",
    "httpx",
    "pydantic",
    "pydantic-extra-types[semver]",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "type" },
]
lint = ["ruff"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "pytest-recording",
    "pytest-xdist",
    "tox",
]
type = ["ty"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN001", "ANN201", "PLC0415", "S101"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pydantic.BaseModel".msg = "Use play_launcher_sdk.models.base.Base instead."

[tool.ruff.lint.isort]
force-single-line = true

[tool.tox]
requires = ["tox", "tox-uv"]
env_list = ["3.14", "3.13", "3.12"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest", "--all"]]
